# ENGH

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
core/: CMakeLists.txt  engine.hpp  object.cpp  object.hpp  string.hpp
core/math/: vec2.hpp
editor/: CMakeLists.txt
editor/private/editor/: Editor.cpp  ImGuiAdapter.cpp  main.cpp
editor/private/editor/panel/: PanelBase.cpp  WorldViewer.cpp
editor/public/editor/: Editor.hpp  ImGuiAdapter.hpp
editor/public/editor/panel/: PanelBase.hpp  WorldViewer.hpp
engine/: CMakeLists.txt
engine/private/core/: debug.cpp  log.cpp  string.cpp
engine/private/eobject/: actor.cpp  object.cpp  world.cpp
engine/private/eobject/component/: box_component.cpp  component.cpp  primitive_component.cpp  scene_component.cpp  sphere_component.cpp  static_mesh_component.cpp  sub_component.cpp
engine/private/eobject/data/: model_3d.cpp  transform.cpp
engine/private/eobject/render/: box.cpp  renderable_object.cpp  sphere.cpp  standard_render.cpp  standard_shaders.cpp
engine/private/eobject/world/: world.cpp  world_registry.cpp
engine/private/input/: input_events.cpp  input_handler.cpp  input_provider.cpp  input_registrar.cpp
engine/private/platform/: engh.cpp  window.cpp
engine/private/platform/glfw/: glfw_input_provider.cpp  glfw_native_linux.cpp  glfw_native_mac.mm  glfw_native_win32.cpp  glfw_window.cpp
engine/private/platform/opengl/: glfw_input_provider.cpp  glfw_window.cpp
engine/private/platform/opengl/render/: base_shader.cpp  fragment_shader.cpp  frame_buffer.cpp  index_buffer.cpp  opengl_index_render_buffer.cpp  opengl_render_context.cpp  opengl_vertex_render_buffer.cpp  program_shader.cpp  render_context.cpp  renderer.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_shader.cpp
engine/private/platform/render/: buffer_layout.cpp  program_shader.cpp  render_buffer.cpp  render_context.cpp  render_device.cpp  renderer.cpp
engine/private/platform/render/opengl/: opengl_render_context.cpp
engine/private/platform/winnt/: winnt_window.cpp
engine/private/render/: render_command.cpp  render_dispatcher.cpp  render_dispatcher_impl.cpp  render_dispatcher_proxy.cpp  world_renderer.cpp
engine/private/render/camera/: camera.cpp  perspective_camera.cpp
engine/private/render/component/: primitive_box_render_delegate.cpp  primitive_render_delegate.cpp  primitive_static_mesh_render_delegate.cpp
engine/private/util/: array.cpp
engine/private/util/file/: fs.cpp
engine/private/util/file/model/: obj.cpp
engine/public/core/: data_types.hpp  debug.hpp  engine.hpp  log.hpp  math.hpp  safe_cast.hpp  string.hpp
engine/public/core/smallfun/: LICENSE  smallfun.hpp
engine/public/eobject/: actor.hpp  object.hpp  tick_target.hpp  world.hpp
engine/public/eobject/component/: box_component.hpp  component.hpp  primitive_component.hpp  scene_component.hpp  sphere_component.hpp  static_mesh_component.hpp  sub_component.hpp
engine/public/eobject/data/: model_3d.hpp  transform.hpp
engine/public/eobject/render/: box.hpp  renderable_object.hpp  sphere.hpp  standard_render.hpp  standard_shaders.hpp
engine/public/eobject/world/: tick_target.hpp  world.hpp  world_registry.hpp
engine/public/input/: input_events.hpp  input_handler.hpp  input_provider.hpp  input_registrar.hpp
engine/public/math/: vec2.hpp  vec3.hpp
engine/public/platform/: engh.hpp  window.hpp
engine/public/platform/glfw/: glfw_input_provider.hpp  glfw_native.h  glfw_window.hpp
engine/public/platform/opengl/: glfw_input_provider.hpp  glfw_window.hpp
engine/public/platform/opengl/render/: base_shader.hpp  fragment_shader.hpp  frame_buffer.hpp  index_buffer.hpp  opengl_index_render_buffer.hpp  opengl_render_context.hpp  opengl_vertex_render_buffer.hpp  program_shader.hpp  render_context.hpp  renderer.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_shader.hpp
engine/public/platform/render/: buffer_layout.hpp  frame_buffer.hpp  index_buffer.hpp  index_render_buffer.hpp  program_shader.hpp  render_buffer.hpp  render_context.hpp  render_device.hpp  renderer.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_render_buffer.hpp
engine/public/platform/render/opengl/: opengl_render_context.hpp
engine/public/platform/winnt/: winnt_window.hpp
engine/public/render/: render_command.hpp  render_dispatcher.hpp  render_dispatcher_impl.hpp  render_dispatcher_proxy.hpp  world_renderer.hpp
engine/public/render/camera/: camera.hpp  perspective_camera.hpp
engine/public/render/component/: primitive_box_render_delegate.hpp  primitive_render_delegate.hpp  primitive_static_mesh_render_delegate.hpp
engine/public/util/: array.hpp  memory.hpp  set.hpp  single_pointer.hpp
engine/public/util/file/: fs.hpp
engine/public/util/file/model/: obj.hpp
shaders/: flat_frag.glsl  flat_vert.glsl
test/: CMakeLists.txt  imgui_adapter.cpp  imgui_adapter.cpp.disabled  imgui_adapter.hpp  imgui_adapter.hpp.disbaled  imgui_impl_glfw.cpp  main.cpp
third/: CMakeLists.txt
third/eigen/: CMakeLists.txt  Eigen3.hpp
third/filament/: CMakeLists.txt
third/glad/: CMakeLists.txt
third/glad/glad/include/glad/: gl.h
third/glad/glad/src/: gl.c
third/glad/glad_debug/include/glad/: gl.h
third/glad/glad_debug/src/: gl.c
third/glfw/: CMakeLists.txt
third/imgui/: CMakeLists.txt
third/mathfu/: CMakeLists.txt
